--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "patreon",
-  "version": "0.4.1",
+  "version": "0.4.1-1",
   "description": "Use the Patreon API via OAuth.",
   "main": "dist/index.js",
   "scripts": {
